--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -10,6 +10,12 @@
 <div class="product-detail" [class.active]="showProductDetail">
   <div>
     <button (click)="toggleProductDetail()">Close</button>
-    Content
+    <h1>{{ productChosen.title }}</h1>
+    <swiper [slidesPerView]="1">
+      <ng-template swiperSlide *ngFor="let img of productChosen.images">
+        <img [src]="img" alt="" />
+      </ng-template>
+    </swiper>
+    <p>{{ productChosen.description }}</p>
   </div>
 </div>
