--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,11 +1,7 @@
 <button (click)="createNewProduct()">Create</button>
 <div class="products--grid">
-  <app-product
-    [product]="product"
-    *ngFor="let product of products"
-    (addedProduct)="onAddToShoppingCart($event)"
-    (showProduct)="onShowDetail($event)"
-  ></app-product>
+  <app-product [product]="product" *ngFor="let product of products" (addedProduct)="onAddToShoppingCart($event)"
+    (showProduct)="onShowDetail($event)"></app-product>
 </div>
 <div class="product-detail" [class.active]="showProductDetail">
   <div>
@@ -17,5 +13,6 @@
       </ng-template>
     </swiper>
     <p>{{ productChosen.description }}</p>
+    <button (click)="updateProduct()">editar</button>
   </div>
 </div>
