--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,4 +1,5 @@
 <button (click)="createNewProduct()">Create</button>
+<button (click)="onShowDetail('121212')">detalle not found</button>
 <div class="products--grid">
   <app-product
     [product]="product"
@@ -9,7 +10,8 @@
   <button (click)="loadMore()">Load more</button>
 </div>
 <div class="product-detail" [class.active]="showProductDetail">
-  <div>
+  {{ statusDetail }}
+  <div *ngIf="productChosen">
     <button (click)="toggleProductDetail()">Close</button>
     <h1>{{ productChosen.title }}</h1>
     <swiper [slidesPerView]="1">
