--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-nav></app-nav>
-<button (click)="createUser()">Create user</button>
+
+<router-outlet></router-outlet>
+
+<!-- <button (click)="createUser()">Create user</button>
 <p>
   <a href="./assets/files/texto.txt" download>Descargar</a>
 </p>
@@ -9,8 +12,10 @@
 <p>
   <input type="file" name="file" (change)="onUpload($event)">
   <img *ngIf="imgRta" [src]="imgRta">
-</p>
-<app-products></app-products>
+</p> -->
+
+<!-- <app-products></app-products> -->
+
 <!-- <p><input type="text" [(ngModel)]="imgParent" /></p>
 <button (click)="toggleImg()">Toggle Img</button>
 <p>{{ showImg}}</p>
