--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,6 +1,7 @@
 <app-img *ngIf="product.images.length" [img]="product.images[0]"></app-img>
 <h2>{{ product.price | currency: "COP" }}</h2>
 <p>{{ product.title }}</p>
+<p class="category">{{ product.category.name }}</p>
 <p>{{ product.taxes | currency:'COP'}}</p>
 <button (click)="onShowDetail()">Show detail</button>
 <button (click)="onAddToCart()">Add cart</button>
