--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,9 @@
-<p>not-found works!</p>
+<div id="not-found-card">
+  <div>
+    <img src="./assets/images/findingpic.png" alt="Image not found">
+  </div>
+  <h1>404 Not Found</h1>
+  <div>
+    <a routerLink="/home">Go back home.</a>
+  </div>
+</div>
