--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -5,5 +5,6 @@
 <p>{{ product.title }}</p>
 <p class="category">{{ product.category.name }}</p>
 <p>{{ product.taxes | currency:'COP'}}</p>
-<button (click)="onShowDetail()">Show detail</button>
+<!-- <button (click)="onShowDetail()">Show detail</button> -->
+<a routerLink="." [queryParams]="{product: product.id}">Show detail</a>
 <button (click)="onAddToCart()">Add cart</button>
