--- a/src/app/website/components/nav/nav.component.html
+++ b/src/app/website/components/nav/nav.component.html
@@ -3,11 +3,11 @@
     <button (click)="toggleMenu()">
       <img src="./assets/svg/icon_menu.svg" alt="menu">
     </button>
-    <a href="">
+    <a routerLink="/">
       <img src="./assets/svg/logo_yard_sale.svg" alt="logo">
     </a>
     <div class="cart">
-      <a href="">
+      <a routerLink="/">
         <img src="./assets/svg/icon_shopping_cart.svg" alt="logo">
       </a>
       <span class="counter">{{ counter }}</span>
@@ -27,7 +27,7 @@
 <div class="hide-mobile">
   <div>
     <nav>
-      <a class="logo" href="">
+      <a class="logo" routerLink="/">
         <img src="./assets/svg/logo_yard_sale.svg" alt="logo">
       </a>
       <ul>
